changes done on mypage

--- a/Html/Mypage.html
+++ b/Html/Mypage.html
@@ -4,6 +4,6 @@
         My first page skilled   
       </head>
     <body>
-        learning deployment
+        learning deployment add new things
     </body>
 </html>
